--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,15 @@
 	<properties>
 		<java.version>23</java.version>
 	</properties>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>33.3.1-jre</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
     		<groupId>org.springframework.boot</groupId>
@@ -116,7 +125,7 @@
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
-     <version>28.0-jre</version>
+     
    </dependency>
  </dependencies>
 
