--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/swc-darwin-arm64": "^15.2.2",
     "axios": "^1.8.3",
     "framer-motion": "^12.4.3",
+    "js-cookie": "^3.0.5",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
